--- a/DA_Xuong/Views/Home/Index.cshtml
+++ b/DA_Xuong/Views/Home/Index.cshtml
@@ -199,7 +199,7 @@
                             <n>(10,5k lượt mua)</n>
                             <div style="justify-content: center;">
                                 <button class="btn btn-success">Mua ngay</button>
-                                <button class="btn btn-primary">Chi tiết</button>
+                                <button href="H" class="btn btn-primary">Chi tiết</button>
                             </div>
                         </div>
 
