--- a/DA_Xuong/Views/ChiTietSach/Index.cshtml
+++ b/DA_Xuong/Views/ChiTietSach/Index.cshtml
@@ -1,81 +1,65 @@
 ﻿@{
     ViewData["Title"] = "Index";
 }
+@model IEnumerable<DA_Xuong.Models.SACH>
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 <section>
-    <div class="container mt-3">
-   
-        <div class="row">
-            <article class="col-md-9 bg-light order-md-1">
-                <div class="row mt-4">
-                    <div class="col-md-3">
-                        <img src="Images_Hieu\Rectangle 60.png" alt="Alternate Text" class="w-100" />
-                        <div class="container mt-2">
-                            <i class="bi bi-suit-heart"></i>
-                            <p class="text-center">Đánh giá sách</p>
-                            <button type="button" class="btn btn-success text-white mb-4">199.000 VNĐ</button>
-                        </div>
-                    </div>
-                    <div class="col-md-9">
-                        <div>
-                            <h3 class="fw-bold">TÂM LÝ HỌC THÀNH CÔNG</h3>
-                            <div>Tác giả</div>
-                            <div>Nhà xuất bản</div>
-                            <div>Ngày cập nhật</div>
-                            <div>Hình thức bìa</div>
-                        </div>
-                        <div class="mt-2 text-warning">
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star"></i>
-                        </div>
-                        <div class="row mt-3">
-                            <p>
-                                Nhà tâm lý học nổi tiếng Carol Dweck sau nhiều thập niên nghiên cứu về thành công đã khám phá ra một ý tưởng thực sự mang tính đột phá – sức mạnh tư duy của chúng ta.
-                                Mindset - Tâm Lý Học Thành Công sẽ cho bạn thấy không chỉ khả năng và tài trí mới mang lại thành công cho chúng ta, mà phần lớn do cách tiếp cận mục tiêu bằng lối tư duy nào. Việc tán dương
-                                trí thông minh và khả năng của con bạn không hề nuôi dưỡng lòng tự trọng và dẫn đến thành tựu, mà thậm chí còn phương hại đến thành công sau này. Với tư duy đúng đắn, chúng ta có thể tạo động lực
-                                cho con cái và giúp chúng phát triển trong trường học, cũng như đạt được mục tiêu của bản thân trong cuộc sống và sự nghiệp. Dweck cho tất cả các bậc cha mẹ, giáo viên, CEO và vận động viên thấy một
-                                ý tưởng đơn giản về não bộ có thể tạo ra tình yêu học tập và sự kiên trì – cơ sở cho những thành tựu vĩ đại ở mọi lĩnh vực. Bookland xin trân trọng giới thiệu Tâm lý học thành công - Carol S.Dweck!
-                            </p>
-                        </div>
-                        <button type="button" class="mb-4 align-content-center btn btn-outline-success">Xem thêm</button>
-                    </div>
-                </div>
-            </article>
-            <aside class="col-md-3 bg-light order-md-2">
-                <div class="row mt-4">
-                    <h5 class="text-center fw-bold">CÓ THỂ BẠN THÍCH</h5>
+    @foreach (var item in Model)
+    {
+        <div class="container mt-3">
+            <div class="row">
+                <article class="col-md-9 bg-light order-md-1">
                     <div class="row mt-4">
-                        <div class="col-md-4 mt-2">
-                            <img src="Images_Hieu\Rectangle 60.png" alt="Alternate Text" class="w-100" />
+                        <div class="col-md-3">
+                            <img src="@item.HINHANH" alt="Alternate Text" class="w-100" />
+                            <div class="container mt-2">
+                                <i class="bi bi-suit-heart"></i>
+                                <p class="text-center">Đánh giá sách</p>
+                                <button type="button" class="btn btn-success text-white mb-4">@item.GIA.ToString("N0") VNĐ</button>
+                            </div>
                         </div>
-                        <div class="col-md-8">
-                            <strong>Tâm lý học</strong>
-                            <p>Trần Nhật Tân</p>
-                        </div>
+                        <div class="col-md-9">
+                            <div>
+                                <h3 class="fw-bold">@item.TIEUDE</h3>
+                                <div>Tác giả: @item.TACGIA.TENTACGIA</div>
+                                <div>
+                                    Nhà xuất bản: @item.NGAYXUATBAN/div>
+                                    <div>Ngày cập nhật: </div>
+                                    <div>Hình thức bìa: </div>
+                                </div>
+                                <div class="mt-2 text-warning">
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star"></i>
+                                </div>
+                                <div class="row mt-3">
+                                    <p>
 
-                        <div class="col-md-4 mt-2">
-                            <img src="Images_Hieu\Rectangle 60.png" alt="Alternate Text" class="w-100" />
+                                    </p>
+                                </div>
+                                <button type="button" class="mb-4 align-content-center btn btn-outline-success">Xem thêm</button>
+                            </div>
                         </div>
-                        <div class="col-md-8">
-                            <strong>Tâm lý học</strong>
-                            <p>Trần Nhật Tân</p>
-                        </div>
-
-                        <div class="col-md-4 mt-2">
-                            <img src="Images_Hieu\Rectangle 60.png" alt="Alternate Text" class="w-100" />
-                        </div>
-                        <div class="col-md-8">
-                            <strong>Tâm lý học</strong>
-                            <p>Trần Nhật Tân</p>
+                </article>
+                <aside class="col-md-3 bg-light order-md-2">
+                    <div class="row mt-4">
+                        <h5 class="text-center fw-bold">CÓ THỂ BẠN THÍCH</h5>
+                        <div class="row mt-4">
+                            <div class="col-md-4 mt-2">
+                                <img src="@item.HINHANH" alt="Alternate Text" class="w-100" />
+                            </div>
+                            <div class="col-md-8">
+                                <strong>@item.TIEUDE</strong>
+                                <p>@item.TACGIA</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </aside>
+                </aside>
+            </div>
         </div>
-    </div>
+    }
 </section>
-
